use Aqua to ensure project quality

--- a/Project.toml
+++ b/Project.toml
@@ -10,15 +10,17 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+Aqua = "0.5"
 NamedDims = "0.2"
 StatsBase = "0.32, 0.33"
 julia = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 PkgBenchmark = "32113eaa-f34f-5b0d-bd6c-c81e245fc73d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 benchmark = ["PkgBenchmark"]
-test = ["Random", "Test"]
+test = ["Aqua", "Random", "Test"]
